<resources>
    <string name="app_name">Calc_brain</string>
    <string name="action_settings">Settings</string>
    <string name="database_manager">Database Manager</string>
    <string name="action_operator_statistics">Operator statistics</string>
    <string name="action_operations">All operations</string>
    <string name="action_delete_statistics">Delete statistics</string>
    <string name="action_day_statistics">Day statistics</string>
</resources>
