<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kaspartilk.calc_brain.MainActivity">
    <item
        android:id="@+id/action_database_manager"
        android:orderInCategory="4"
        android:title="@string/database_manager"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_operator_statistics"
        android:orderInCategory="1"
        android:title="@string/action_operator_statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_operations"
        android:orderInCategory="3"
        android:title="@string/action_operations"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_statistics"
        android:orderInCategory="5"
        android:title="@string/action_delete_statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_day_statistics"
        android:orderInCategory="2"
        android:title="@string/action_day_statistics"
        app:showAsAction="never" />

</menu>
